--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+#Confirmar puerto automatico
+#server.port=0
+
+#id de la instancia unica
+
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
