--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+  set('springCloudVersion', "2023.0.1")
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -29,7 +33,16 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    //implementation 'org.springdoc:springdoc-openapi-starter-common:2.0.2'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
+
+//dependencyManagement {
+ // imports {
+  //  mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+//  }
+//}
 
 tasks.named('test') {
 	useJUnitPlatform()
